@@ -5,3 +5,4 @@ cow_selection = random
 log_path = /var/log/ansible.log
 display_args_to_stdout = True
 forks = 50
+retry_files_enabled = False
