@@ -5,3 +5,4 @@ oi-bus.nginx /etc/nginx/sites-available
 oi-bus.nginx.l /etc/nginx/sites-enabled
 oi-inventory /usr/bin
 ansible-oi.cfg /etc/ansible
+playbooks/*.yml /usr/share/oi-bus/playbooks
